# penrose

./: Cargo.toml
.github/workflows/: bench.yml  test.yml
src/: main.rs
tiling/: Cargo.toml  README.md
tiling/src/: chunk.rs  constants.rs  constellation.rs  dart.rs  double_kite.rs  fivefold.rs  iai.rs  intersection_point.rs  kite.rs  lib.rs  musical_sequence.rs  shape.rs  tiling.rs
