[package]
name = "penrose-tiling"
authors = ["Addison Crump <addisoncrump@tamu.edu>"]
description = "A Penrose tiling generator based on Jason Healy's Penrose Empires"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
iai = "0.1"

[[bench]]
name = "iai"
harness = false
path = "src/iai.rs"

[dependencies]
arrayvec = "0.7"
derive_more = "0.99"
euclid = "0.22"
itertools = "0.10"
lazy_static = "1.4"
num = "0.4"
